# energy-trading-interview-cases-30-12-2025

case1/: task.txt
case1/docs/: 1. heat_pump_steering_analysis.md  2. improved_architecture.md  3. economic_optimization.md  4. implementation_guide.md
case2/: forecast_training.ipynb  forecaster.py  pyproject.toml  task.txt
case2/data/: feature_importance.csv  sample_users_lat_lon.csv
case2/docs/: intraday_trading_architecture.md  power_consumption_forecasting.md
case2/temporal_app/: README.md  client_example.py  docker-compose.yml  pyproject.toml  pytest.ini  view_forecast.py  worker.py
case2/temporal_app/activities/: __init__.py  forecast_activities.py
case2/temporal_app/tests/: __init__.py  conftest.py  test_activities.py  test_forecaster.py  test_workflows.py
case2/temporal_app/workflows/: __init__.py  intraday_forecast.py
case2/trained_model/: metadata.pkl  model.txt
