[project]
name = "heat-pump-forecasting"
version = "0.1.0"
description = "Heat pump power consumption forecasting"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "lightgbm>=4.1.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]