[project]
name = "intraday-forecast-temporal"
version = "0.1.0"
description = "Temporal.io workflow for intraday heat pump power forecasting"
requires-python = ">=3.11"
dependencies = [
    "temporalio>=1.5.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "lightgbm>=4.1.0",
    "redis>=5.0.0",
    "clickhouse-connect>=0.7.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
